Add Discord webhook notifications
- New DiscordNotifier with rich embeds
- Color-coded severity badges
- Token/wallet links to Basescan
- Digest mode for batch notifications
- NotificationManager for unified dispatch
- Updated env.example with Discord config

--- a/env.example
+++ b/env.example
@@ -80,7 +80,10 @@ CLANKER_RATE_LIMIT=5                 # RPC requests per second
 # ============================================
 # NOTIFICATIONS (OPTIONAL)
 # ============================================
-# Telegram bot token for alerts
+
+# ----------------
+# Telegram
+# ----------------
 # Create a bot via @BotFather on Telegram
 # TELEGRAM_BOT_TOKEN=your-bot-token
 
@@ -90,6 +93,19 @@ CLANKER_RATE_LIMIT=5                 # RPC requests per second
 
 # Enable/disable Telegram notifications
 TELEGRAM_ENABLED=true
+
+# ----------------
+# Discord
+# ----------------
+# Create a webhook in Discord channel settings
+# Server Settings > Integrations > Webhooks > New Webhook
+# DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/...
+
+# Custom bot name in Discord (default: ClawFi)
+# DISCORD_USERNAME=ClawFi
+
+# Enable/disable Discord notifications
+DISCORD_ENABLED=true
 
 # ============================================
 # INTELLIGENCE JOBS (v0.1.1)
