Add Pump.fun launchpad connector for Solana
- PumpFunConnector for monitoring Solana meme launches
- Fetch recent, graduated, and trending tokens
- Track bonding curve status and Raydium graduation
- Social links and community engagement data
- Test suite for connector functionality
- Updated env.example with Pump.fun config
- Added LaunchpadConnector interface to types

--- a/env.example
+++ b/env.example
@@ -60,7 +60,7 @@ ARB_RPC_URL=https://arb1.arbitrum.io/rpc
 BASE_RPC_URL=https://mainnet.base.org
 
 # ============================================
-# CLANKER CONNECTOR (OPTIONAL)
+# CLANKER CONNECTOR (OPTIONAL) - Base
 # ============================================
 # Enable Clanker launchpad indexing on Base
 CLANKER_ENABLED=true
@@ -76,6 +76,18 @@ CLANKER_RATE_LIMIT=5                 # RPC requests per second
 
 # Custom event topics (comma-separated topic0 hashes)
 # CLANKER_EVENT_TOPICS=0x...
+
+# ============================================
+# PUMP.FUN CONNECTOR (OPTIONAL) - Solana
+# ============================================
+# Enable Pump.fun launchpad indexing on Solana
+PUMPFUN_ENABLED=true
+
+# Polling configuration
+PUMPFUN_POLL_INTERVAL_MS=15000      # Poll every 15 seconds
+
+# Only track tokens that graduated to Raydium
+PUMPFUN_GRADUATION_ONLY=false
 
 # ============================================
 # NOTIFICATIONS (OPTIONAL)
