Add Four.meme launchpad connector for BSC
- FourMemeConnector for monitoring BSC meme launches
- Fetch recent, graduated, and trending tokens
- Track bonding curve and PancakeSwap graduation
- Holder count and 24h volume/price change data
- Updated env.example with Four.meme config

--- a/env.example
+++ b/env.example
@@ -90,6 +90,18 @@ PUMPFUN_POLL_INTERVAL_MS=15000      # Poll every 15 seconds
 PUMPFUN_GRADUATION_ONLY=false
 
 # ============================================
+# FOUR.MEME CONNECTOR (OPTIONAL) - BSC
+# ============================================
+# Enable Four.meme launchpad indexing on BNB Smart Chain
+FOURMEME_ENABLED=true
+
+# Polling configuration
+FOURMEME_POLL_INTERVAL_MS=15000     # Poll every 15 seconds
+
+# Minimum market cap filter (USD)
+FOURMEME_MIN_MARKET_CAP=0
+
+# ============================================
 # NOTIFICATIONS (OPTIONAL)
 # ============================================
 
