Add AI-powered agent features with OpenAI GPT-4 integration
- Create AI service for token analysis, signal rating, and trading advice
- Add new agent routes: /agent/ai/analyze, /agent/ai/rate, /agent/ai/ask, /agent/ai/chat
- Add terminal commands: analyze, ask, rate
- Update dashboard with AI command buttons
- Add openai package dependency

--- a/env.example
+++ b/env.example
@@ -168,6 +168,16 @@ PRICE_ALERTS_THRESHOLD=10                 # 10% change
 PRICE_ALERTS_LOOKBACK_MINUTES=60          # Compare vs 1 hour ago
 
 # ============================================
+# OPENAI / AI AGENT
+# ============================================
+# API key for OpenAI GPT-4 integration
+# Used for token analysis, signal rating, and trading advice
+OPENAI_API_KEY=sk-your-openai-api-key-here
+
+# Model to use (default: gpt-4o-mini for cost-efficiency)
+OPENAI_MODEL=gpt-4o-mini
+
+# ============================================
 # DEVELOPMENT
 # ============================================
 # Enable dev-only endpoints like /dev/simulate-event
