--- a/apps/node/package.json
+++ b/apps/node/package.json
@@ -31,6 +31,7 @@
     "bullmq": "^5.1.0",
     "fastify": "^4.25.2",
     "ioredis": "^5.3.2",
+    "openai": "^4.47.0",
     "viem": "^2.45.1",
     "zod": "^3.22.4"
   },
