Add Uniswap/GeckoTerminal, Etherscan, Basescan, BSCScan integrations to Clawf AI

--- a/env.example
+++ b/env.example
@@ -178,6 +178,18 @@ OPENAI_API_KEY=sk-your-openai-api-key-here
 OPENAI_MODEL=gpt-4o-mini
 
 # ============================================
+# BLOCK EXPLORER APIs (Optional)
+# ============================================
+# Used for contract verification status and token info
+# Get free API keys from:
+# - https://etherscan.io/apis
+# - https://basescan.org/apis  
+# - https://bscscan.com/apis
+ETHERSCAN_API_KEY=
+BASESCAN_API_KEY=
+BSCSCAN_API_KEY=
+
+# ============================================
 # DEVELOPMENT
 # ============================================
 # Enable dev-only endpoints like /dev/simulate-event
