Implement ClawF Intelligence Agent - Full Architecture
PART 1: DiscoveryEngine
- Continuous moonshot scanning across Base, ETH, BSC, Solana
- N-of-M condition matching with evidence
- MomentumScore, LiquidityScore, RiskScore, Confidence
- Volume baselines and spike detection
- Launch age is metadata only, never a filter

PART 2: SocialSignalAnalyzer (X/Twitter)
- Query public posts for contract addresses
- Track mention count, velocity, spikes
- Spam detection via repeat poster ratio
- Rate limiting and caching
- Context signal only, never sole trigger

PART 3: WalletIntelligence
- Classify old wallets (6+ months, 100+ txns, 20+ contracts)
- Identify profitable wallets (positive PnL history)
- volumeShareFromOldWallets, volumeShareFromProfitableWallets
- BOT_HEAVY_ACTIVITY flag detection

PART 4: Flag Detection System
- Hard flags: LIQUIDITY_REMOVED, HONEYPOT_SUSPECTED, TRADING_DISABLED, EXTREME_CONCENTRATION
- Soft flags: FEE_ON_TRANSFER, WASH_TRADING, RAPID_PUMP, HYPE_NO_LIQUIDITY, BOT_HEAVY_ACTIVITY
- All flags include evidence

PART 5: PositionTracker & Exit Engine
- Profit targets: 2x, 5x, 10x
- Trailing stop: -25% from peak after 2x
- Liquidity drop: -40% in 10 minutes
- Momentum reversal detection
- Smart money exit tracking
- Signals: HOLD, TRIM, EXIT with confidence

PART 6: ExplanationEngine
- Human-readable explanations for all decisions
- References computed metrics only
- Explicit 'unknown' for missing data
- No AI provider mentions

PART 7: API Routes (/clawf/*)
- GET /clawf/radar - Scan for candidates
- GET /clawf/analyze/:token - Analyze specific token
- POST /clawf/track - Start tracking
- GET /clawf/positions - Get tracked positions
- GET /clawf/exits - Check exit signals
- GET /clawf/policy - Get configuration
- PUT /clawf/policy - Update configuration
- GET /clawf/status - Get ClawF status

Added X API credentials to env.example

--- a/env.example
+++ b/env.example
@@ -190,6 +190,16 @@ BASESCAN_API_KEY=
 BSCSCAN_API_KEY=
 
 # ============================================
+# X (TWITTER) API (Optional - ClawF Social Signals)
+# ============================================
+# Used for social signal analysis (mention tracking)
+# Get API keys from: https://developer.twitter.com
+# Required for SocialSignalAnalyzer module
+X_BEARER_TOKEN=
+X_CONSUMER_KEY=
+X_CONSUMER_SECRET=
+
+# ============================================
 # DEVELOPMENT
 # ============================================
 # Enable dev-only endpoints like /dev/simulate-event
