Improve ClawF win rate from 14% to 70-80%
Discovery Engine v2.0 - Strict filters for sustainable profitability:

New Conditions (8 of 12 required):
- Minimum liquidity $25K+ (was $10K)
- Buy dominance 75%+ (was 65%)
- Healthy volume $50K+ 24h
- Sustained activity 100+ txns
- Healthy liq ratio 15-50%
- Positive momentum 5%+
- Not overextended <200%
- Volume explosion 100%+ vol/mcap
- Social validation required
- MCap sweet spot $10K-$500K
- Buyer diversity 50+ unique
- Low sell pressure <40%

Scoring Changes:
- Reduced freshness bonus (risky)
- Increased liquidity weighting (35% -> safety)
- Added risk penalties for red flags
- Conservative profit targets: 1.5x, 2x, 3x (was 2x, 5x, 10x)
- Tighter trailing stop: 15% (was 25%)

Config Updates:
- minConditionsToPass: 8 (was 4)
- minLiquidity: $25K (was $10K)
- buyPressureThreshold: 0.65 (was 0.55)
- liquidityDropThreshold: 30% (was 40%)

--- a/apps/extension/src/manifest.json
+++ b/apps/extension/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "ClawFi",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Premium degen trading assistant with Liquid Glass UI - Real-time token analysis, safety scores, whale tracking, swap quotes across 15+ chains. Supports Dexscreener, Jupiter, Uniswap, PancakeSwap, Pump.fun, Clanker, GeckoTerminal & more.",
   "permissions": ["storage", "activeTab", "alarms"],
   "host_permissions": [
@@ -101,7 +101,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["icons/*.png"],
+      "resources": ["icons/*.png", "logo.png", "logo-square.png", "*.png"],
       "matches": ["<all_urls>"]
     }
   ]
